[tool.poetry]
name = "python-development-tools-utilities"
version = "0.1.0"
description = ""
authors = ["James Gibson <jamesagibson@protonmail.com>"]
readme = "README.md"
packages = [{include = "python"}]

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.3.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
